--- a/fancifymytext.html
+++ b/fancifymytext.html
@@ -17,7 +17,7 @@
 			<!-- A large entry field for user to enter text 4 rows 30 columns -->
 			<fieldset name="Text">
 				<label for="Text">Text</label>
-				<textarea rows="4" cols="30" name="input" id="myText">
+				<textarea rows="4" cols="30" name="input" id="my-text">
 
 				</textarea>
 			</fieldset>
@@ -25,7 +25,7 @@
 		<!-- new border called "Fancify"-->
 		<fieldset name="Fancify">
 				<!-- button label "Bigger!"-->
-				<button id="Bigger" oneclick="bigger()">Bigger!</button>
+				<button id="Bigger" onclick="bigger();">Bigger!</button>
 
 				<!-- two radio buttons labeled "FancyShmancy" and "BoringBetty"-->
 				<input type="radio" id="Fancify">
